<resources>
    <string name="app_name">eKost</string>
    <string name="title_home">Kost</string>
    <string name="title_search">Search</string>
    <string name="title_login">Login</string>
    <string name="title_profile">Profile</string>
    <string name="e_kost">eKost</string>
    <string name="welcome_screen">Hai Kamu,\nCari Apa Hari Ini?</string>
    <string name="profile">Profile</string>
    <string name="cost">Harga :</string>
    <string name="owner">Nama Pemilk :</string>
    <string name="numberTelephone">No Telphone :</string>
    <string name="address">Alamat :</string>
    <string name="address2">Alamat Anda</string>
    <string name="price">Harga :</string>
    <string name="category">Kategori :</string>
    <string name="description">Deskripsi :</string>
    <string name="totalallboardinghouse">Jumlah Seluruh Kost :</string>
    <string name="order">Bayar</string>
    <string name="back">Kembali</string>
    <string name="image_kost">Gambar Kost</string>
    <string name="title_activity_testing">Testing</string>
    <string name="pemilik_kost">Pemilik Kost</string>
    <string name="pencari_kost">Pencari Kost</string>
    <string name="login_sebagai">Login Sebagai</string>
    <string name="text_login">Selamat Datang, Silahkan Login</string>
    <string name="fail_login">User ID atau password yang anda masukkan salah!</string>
    <string name="email">Email</string>
    <string name="email2">Email Anda</string>
    <string name="password">Password</string>
    <string name="password2">Password Anda</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>

    <string name="register">Register</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="fullname">Nama Anda</string>
    <string name="numberTelephone2">Nomor Telephone</string>
    <string name="alert_login">Harus Login Terlebih Dahulu</string>
    <string name="logout">Log Out</string>
    <string name="editProfile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="edit_profile">Ubah Data Profil</string>
    <string name="save">Simpan</string>
    <string name="setting">Pengaturan</string>
    <string name="title_activity_pemilik_kos">PemilikKosActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="welcome_screen_pemilikkos">Halaman Pendaftar/Pemilik E-Kost</string>
    <string name="welcome_screenbbody_pemilikkost">Selamat Datang di halaman user sistem informasi E - Kost. Dihalaman ini anda selaku pemilik dan pendaftar di e-kost dapat mendaftarkan kost anda untuk di tampilkan di aplikasi kami untuk tujuan promosi kost / kontrakan anda di area purwokerto.</string>
    <string name="profile_pemilikkos">Profile Pemilik Kos</string>
</resources>