<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_kost"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_login"
        android:enabled="true"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/title_login" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profile" />

</menu>