<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.profile.user.pemilikkost.ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F6F6F6"
        app:cardCornerRadius="21dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_pemilikkos"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tvUsername"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="21dp"
                android:textSize="21sp"
                app:drawableStartCompat="@drawable/ic_person_24dp"
                tools:text="@string/fullname" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="21dp"
                android:textSize="21sp"
                app:drawableStartCompat="@drawable/ic_email_24dp"
                tools:text="@string/email2" />

            <TextView
                android:id="@+id/tvPassword"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="21dp"
                android:textSize="21sp"
                app:drawableStartCompat="@drawable/ic_lock_24dp"
                tools:text="@string/password2" />

            <TextView
                android:id="@+id/tvAddress"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="21dp"
                android:textSize="21sp"
                app:drawableStartCompat="@drawable/ic_house_24dp"
                tools:text="@string/address2" />

            <TextView
                android:id="@+id/tvNumberTelephone"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="21dp"
                android:textSize="21sp"
                app:drawableStartCompat="@drawable/ic_mobile_24dp"
                tools:text="@string/numberTelephone2" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>